--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "handy-mechanic-v2",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "15.1.0",
+    "next": "15.1.9",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "stripe": "latest",
@@ -18,10 +18,14 @@
   },
   "devDependencies": {
     "typescript": "5.7.2",
+    "postcss": "8.4.49",
+    "tailwindcss": "3.4.16",
     "@types/node": "22.10.2",
     "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.1",
-    "postcss": "8.4.49",
-    "tailwindcss": "3.4.16"
+    "@types/react-dom": "19.0.1"
+  },
+  "overrides": {
+    "next": "15.1.9",
+    "react": "19.0.0"
   }
 }
